fix for deserialization error